--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo"> MAMI'S BARAICH</div>
+      <div class="logo"> Amine BARAICH</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -48,12 +48,7 @@
         <h1 class="title">Amine BARAICH</h1>
         <p class="section__text__p2">Data Sciantist</p>
         <div class="btn-container">
-          <button
-            class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
-          >
-            Télécharger CV
-          </button>
+          
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contacts
           </button>
