--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="section__text">
         <p class="section__text__p1">Je suis</p>
         <h1 class="title">Amine BARAICH</h1>
-        <p class="section__text__p2">Data Sciantist</p>
+        <p class="section__text__p2">Data Scientist </p>
         <div class="btn-container">
           
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
