--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">À propos</a></li>
-          <li><a href="#experience">Expérience</a></li>
+          <li><a href="#experience">Compétences</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contacts</a></li>
         </ul>
@@ -33,7 +33,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">À propos</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Expérience</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Compétences</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contacts</a></li>
         </div>
@@ -89,7 +89,7 @@
                 class="icon"
               />
               <h3>Expérience</h3>
-              <p>Plus de trois stages en entreprises dans le domaine de la data science</p>
+              <p>Plus de trois stages en entreprises dans le domaine de la data science, et des statistiques</p>
             </div>
             <div class="details-container">
               <img
@@ -118,11 +118,11 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">Explorez mon</p>
-      <h1 class="title">Expérience</h1>
+      <h1 class="title">Compétences</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Compétences métier</h2>
+            <h2 class="experience-sub-title"> Téchniques</h2>
             <div class="article-container">
               <article>
                 <img
@@ -143,7 +143,18 @@
                 />
                 <div>
                   <h3>R/SAS</h3>
-                  <p>avancé</p>
+                  <p>Avancé</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Spark</h3>
+                  <p>Avancé</p>
                 </div>
               </article>
               <article>
@@ -154,7 +165,7 @@
                 />
                 <div>
                   <h3>MLFlow/Git</h3>
-                  <p>avancé</p>
+                  <p>Avancé</p>
                 </div>
               </article>
               <article>
@@ -165,7 +176,7 @@
                 />
                 <div>
                   <h3>Docker</h3>
-                  <p>Intermédiaire</p>
+                  <p>Débutant</p>
                 </div>
               </article>
               <article>
@@ -175,8 +186,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>postgresql/MySQL</h3>
-                  <p>Intermédiaire</p>
+                  <h3>SQL</h3>
+                  <p>Avancé</p>
                 </div>
               </article>
               <article>
@@ -193,7 +204,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Compétences téchniques</h2>
+            <h2 class="experience-sub-title"> Métier </h2>
             <div class="article-container">
               <article>
                 <img
@@ -225,7 +236,7 @@
                 />
                 <div>
                   <h3>Machine learning</h3>
-                  <p>Intermédiaire</p>
+                  <p>Avancé</p>
                 </div>
               </article>
               <article>
@@ -236,7 +247,7 @@
                 />
                 <div>
                   <h3>deep learning</h3>
-                  <p>Intermédiaire</p>
+                  <p>Avancé</p>
                 </div>
               </article>
               <article>
@@ -247,7 +258,7 @@
                 />
                 <div>
                   <h3>visualisation des données</h3>
-                  <p>avancé</p>
+                  <p>Avancé</p>
                 </div>
               </article>
               <article>
@@ -258,7 +269,7 @@
                 />
                 <div>
                   <h3>AI</h3>
-                  <p>Intermédiaire</p>
+                  <p>Débutant</p>
                 </div>
               </article>
             </div>
@@ -349,7 +360,7 @@
         <div class="nav-links-container">
             <ul class="nav-links">
                 <li><a href="#about">À propos</a></li>
-                <li><a href="#experience">Expérience</a></li>
+                <li><a href="#experience">Compétences</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contacts</a></li>
             </ul>
