--- a/index.html
+++ b/index.html
@@ -285,18 +285,18 @@
     </section>
     <section id="projects">
       <p class="section__text__p1"> </p>
-      <h1 class="title">Projects</h1>
+      <h1 class="title">Projets</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/Machine learning.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project 1</h2>
+            <h2 class="experience-sub-title project-title">Projet 1 : Modèle de Prévision et Segmentation des Risques des assurées</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -314,11 +314,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project 2</h2>
+            <h2 class="experience-sub-title project-title">Projet 2 : création d'une interface de visualisation   des données</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/AmineBaraich/Data-Analysis-and-Time-Series-Modeling-in-R'"
+                onclick="location.href='https://github.com/AmineBaraich/Financial-Data-viz-with-Bokeh'"
               >
                 Github
               </button>
