--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Projet 1 : Modèle de Prévision et Segmentation des Risques des assurées</h2>
+            <h2 class="experience-sub-title project-title">Projet 1 : Modèle de Prévision et de Segmentation des Risques des Assurés</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
