--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <body>
     <nav id="desktop-nav">
         <div class="text">
-            <span class="visible">Bienvenue</span>
-            <span class="fading"> sur mon site </span>
+            <span class="fading">Welcome to</span>
+            <span class="visible"> my Profil </span>
         </div>        
       <div>
         <ul class="nav-links">
-          <li><a href="#about">À propos</a></li>
-          <li><a href="#experience">Compétences</a></li>
+          <li><a href="#about">About me</a></li>
+          <li><a href="#experience">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contacts</a></li>
         </ul>
@@ -32,8 +32,8 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">À propos</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Compétences</a></li>
+          <li><a href="#about" onclick="toggleMenu()">About me</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contacts</a></li>
         </div>
@@ -44,9 +44,9 @@
         <img src="./assets/profile-pic.jpg" alt="John Doe profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Je suis</p>
+        <p class="section__text__p1">I'm</p>
         <h1 class="title">Amine BARAICH</h1>
-        <p class="section__text__p2">Statisticien | Data Scientist </p>
+        <p class="section__text__p2">Big Data Engineer </p>
         <div class="btn-container">
           
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -70,8 +70,8 @@
       </div>
     </section>
     <section id="about">
-      <p class="section__text__p1">En savoir plus</p>
-      <h1 class="title">sur moi</h1>
+      <p class="section__text__p1">more</p>
+      <h1 class="title">About me</h1>
       <div class="section-container">
         <div class="section__pic-container">
           <img
@@ -88,8 +88,8 @@
                 alt="Experience icon"
                 class="icon"
               />
-              <h3>Expérience</h3>
-              <p>Plus de trois stages en entreprises dans le domaine de la data science, et des statistiques</p>
+              <h3>Experiences</h3>
+              <p>Completed internships as an NLP Engineer, Machine Learning Engineer, and Data Analyst, accumulating over a year of professional experience.</p>
             </div>
             <div class="details-container">
               <img
@@ -97,14 +97,14 @@
                 alt="Education icon"
                 class="icon"
               />
-              <h3>Éducation</h3>
-              <p>Ingénieur En Statistique <br>
-                master en Data Science</p>
+              <h3>Education</h3>
+              <p>Enginner degree in big data and statistics <br>
+                and a master degree in econometrics and big data</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-                Durant mon parcours scolaire et professionnel, j'ai eu la chance de côtoyer des personnes qui m'ont énormément apporté, tant sur le plan technique que personnel. Les deux années en classes préparatoires se sont avérées être les plus formatrices. C'est là que j'ai pris conscience de mon talent pour résoudre des problèmes complexes, gérer le stress, organiser plusieurs projets simultanément et réalisé à quel point j'avais besoin des autres pour avancer.
+              I am interested in three main related fields: economics, finance, and risk management, and I enjoy using data science tools to enhance and gain insights in these areas. Over the last two years, I have worked on a wide variety of projects in these fields.
             </p>
           </div>
         </div>
@@ -117,12 +117,12 @@
       />
     </section>
     <section id="experience">
-      <p class="section__text__p1">Explorez mon</p>
-      <h1 class="title">Compétences</h1>
+      <p class="section__text__p1">Explore my</p>
+      <h1 class="title">Skills</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title"> Téchniques</h2>
+            <h2 class="experience-sub-title"> Technical</h2>
             <div class="article-container">
               <article>
                 <img
@@ -132,7 +132,7 @@
                 />
                 <div>
                   <h3>Python</h3>
-                  <p>avancé</p>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -143,7 +143,7 @@
                 />
                 <div>
                   <h3>R/SAS</h3>
-                  <p>Avancé</p>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -154,7 +154,7 @@
                 />
                 <div>
                   <h3>Spark</h3>
-                  <p>Avancé</p>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -164,8 +164,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>MLFlow/Git</h3>
-                  <p>Avancé</p>
+                  <h3>MLFlow|Git</h3>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -175,8 +175,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Docker</h3>
-                  <p>Débutant</p>
+                  <h3>Docker|AWS</h3>
+                  <p>intermediate</p>
                 </div>
               </article>
               <article>
@@ -187,7 +187,7 @@
                 />
                 <div>
                   <h3>SQL</h3>
-                  <p>Avancé</p>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -198,13 +198,24 @@
                 />
                 <div>
                   <h3>Linux</h3>
-                  <p>Débutant</p>
+                  <p>Beginner</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>C++</h3>
+                  <p>Beginner</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title"> Métier </h2>
+            <h2 class="experience-sub-title"> job-specifics</h2>
             <div class="article-container">
               <article>
                 <img
@@ -213,8 +224,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Préparation de données</h3>
-                  <p>avancé</p>
+                  <h3>Data preprocessing</h3>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -224,8 +235,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Nettoyage de données</h3>
-                  <p>avancé</p>
+                  <h3> Database Management</h3>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -236,7 +247,7 @@
                 />
                 <div>
                   <h3>Machine learning</h3>
-                  <p>Avancé</p>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -247,7 +258,7 @@
                 />
                 <div>
                   <h3>deep learning</h3>
-                  <p>Avancé</p>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -257,8 +268,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>visualisation des données</h3>
-                  <p>Avancé</p>
+                  <h3>Data Visualization</h3>
+                  <p>advanced</p>
                 </div>
               </article>
               <article>
@@ -269,7 +280,7 @@
                 />
                 <div>
                   <h3>AI</h3>
-                  <p>Débutant</p>
+                  <p>intermediate</p>
                 </div>
               </article>
             </div>
@@ -284,7 +295,7 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1"> </p>
+      <p class="section__text__p1"> Browse my</p>
       <h1 class="title">Projets</h1>
       <div class="experience-details-container">
         <div class="about-containers">
@@ -323,6 +334,7 @@
                 Github
               </button>
             </div>
+            
           </div>
         </div>
       </div>
@@ -334,8 +346,8 @@
       />
     </section>
     <section id="contact">
-      <p class="section__text__p1">Entrer en</p>
-      <h1 class="title">Contact</h1>
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">contact</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -359,8 +371,8 @@
       <nav>
         <div class="nav-links-container">
             <ul class="nav-links">
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#experience">Compétences</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contacts</a></li>
             </ul>
