--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Projet 1 : Modèle de Prévision et de Segmentation des Risques des Assurés</h2>
+            <h2 class="experience-sub-title project-title">Project 1 : Risk Forecasting and Segmentation Model for Policyholders</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -325,7 +325,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Projet 2 : création d'une interface de visualisation   des données</h2>
+            <h2 class="experience-sub-title project-title">Project 2: Creation of a Data Visualization Interface</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
