--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About me</a></li>
+          <li><a href="#experience-timeline">Experiences</a></li>
           <li><a href="#experience">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contacts</a></li>
+          
         </ul>
       </div>
     </nav>
@@ -33,6 +35,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About me</a></li>
+          <li><a href="#experience-timeline" onclick="toggleMenu()">Experiences</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contacts</a></li>
@@ -106,6 +109,35 @@
             <p>
               I am interested in three main related fields: economics, finance, and risk management, and I enjoy using data science tools to enhance and gain insights in these areas. Over the last two years, I have worked on a wide variety of projects in these fields.
             </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience-timeline'"
+      />
+    </section>
+    <section id="experience-timeline">
+      <h1 class="title">Experiences</h1>
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-content">
+            <h2>2024 - 6 Months</h2>
+            <p>Maching Learning Engineer Intern at Scailian.</p>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-content">
+            <h2>2023 - 6 Months</h2>
+            <p>Data scientist Intern at Crédit Du Maroc.</p>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-content">
+            <h2>2022 - 2 Months</h2>
+            <p>Data Analyst Intern at Marjane Holding.</p>
           </div>
         </div>
       </div>
@@ -372,6 +404,7 @@
         <div class="nav-links-container">
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
+                <li><a href="#experience-timeline">Experiences</a></li>
                 <li><a href="#experience">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contacts</a></li>
