--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="section__text">
         <p class="section__text__p1">I'm</p>
         <h1 class="title">Amine BARAICH</h1>
-        <p class="section__text__p2">Big Data Engineer </p>
+        <p class="section__text__p2">Data Scientist</p>
         <div class="btn-container">
           
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
