--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 class="icon"
               />
               <h3>Experiences</h3>
-              <p>Completed internships as an NLP Engineer, Machine Learning Engineer, and Data Analyst, accumulating over a year of professional experience.</p>
+              <p>Completed internships as an GenIA Consultant, Data Analyst, and Machine Learning Engineer , accumulating over a year of professional experience.</p>
             </div>
             <div class="details-container">
               <img
@@ -101,13 +101,13 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Enginner degree in big data and statistics <br>
-                and a master degree in econometrics and big data</p>
+              <p>Enginner degree Applied Economics, Statistics and Big Data
+                and a master degree in big data and econometrics </p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              I am interested in three main related fields: economics, finance, and risk management, and I enjoy using data science tools to enhance and gain insights in these areas. Over the last two years, I have worked on a wide variety of projects in these fields.
+              I am a versatile professional capable of excelling in several roles, including Data Scientist, Analytics Consultant, AI/ML Engineer, and Big Data Engineer. With expertise in machine learning, data visualization, NLP, and cloud-based data processing, I bring a comprehensive skill set to tackle diverse challenges and contribute to strategic decision-making and process optimization.
             </p>
           </div>
         </div>
@@ -125,13 +125,13 @@
         <div class="timeline-item">
           <div class="timeline-content">
             <h2>2024 - 6 Months</h2>
-            <p>Maching Learning Engineer Intern at Scailian.</p>
+            <p>GenAI Consultant at Scailian.</p>
           </div>
         </div>
         <div class="timeline-item">
           <div class="timeline-content">
             <h2>2023 - 6 Months</h2>
-            <p>Data scientist Intern at Crédit Du Maroc.</p>
+            <p>Time Series Forecasting Analyst at Crédit Du Maroc.</p>
           </div>
         </div>
         <div class="timeline-item">
@@ -279,7 +279,7 @@
                 />
                 <div>
                   <h3>Machine learning</h3>
-                  <p>advanced</p>
+                  <p>intermediate</p>
                 </div>
               </article>
               <article>
@@ -290,7 +290,7 @@
                 />
                 <div>
                   <h3>deep learning</h3>
-                  <p>advanced</p>
+                  <p>intermediate</p>
                 </div>
               </article>
               <article>
