--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 class="icon"
               />
               <h3>Experiences</h3>
-              <p>Completed internships as an GenIA Consultant, Data Analyst, and Machine Learning Engineer , accumulating over a year of professional experience.</p>
+              <p>Completed missions as an GenIA Consultant, Data Analyst, and Machine Learning Engineer , accumulating over a year of professional experience.</p>
             </div>
             <div class="details-container">
               <img
